public class Atm implements ParaIslem{

    private int toplamPara;

    public int getToplamPara() {
        return toplamPara;
    }

    public void setToplamPara(int toplamPara) {
        this.toplamPara = toplamPara;
    }

    @Override
    public void paraCek() {
        // TODO Auto-generated method stub
        throw new UnsupportedOperationException("Unimplemented method 'paraCek'");
    }

    @Override
    public void paraYatir() {
        // TODO Auto-generated method stub
        throw new UnsupportedOperationException("Unimplemented method 'paraYatir'");
    }

    @Override
    public void odeme() {
        // TODO Auto-generated method stub
        throw new UnsupportedOperationException("Unimplemented method 'odeme'");
    }


}
