public interface ParaIslem {
    public abstract void paraCek();
    public abstract void paraYatir();
    public abstract void odeme();
}
